@@ -41,6 +41,9 @@
 # allow-guest = True if guest login is allowed
 # guest-session = Session to load for guests (overrides user-session)
 # session-wrapper = Wrapper script to run session with
+# display-setup-script = Script to run when starting a greeter session (runs as root)
+# session-setup-script = Script to run when starting a user session (runs as root)
+# session-cleanup-script = Script to run when quitting a user session (runs as root)
 # autologin-guest = True to log in as guest by default
 # autologin-user = User to log in with by default (overrides autologin-guest)
 # autologin-user-timeout = Number of seconds to wait before loading default user
@@ -59,6 +62,9 @@
 #allow-guest=true
 #guest-session=UNIMPLEMENTED
 #session-wrapper=lightdm-session
+#display-setup-script=
+#session-setup-script=
+#session-cleanup-script=
 #autologin-guest=false
 #autologin-user=
 #autologin-user-timeout=0
